--- a/demo-hbase-async/pom.xml
+++ b/demo-hbase-async/pom.xml
@@ -3,19 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>xyz.kail.demo</groupId>
         <artifactId>HBase</artifactId>
+        <groupId>HBase</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demo-hbase-cdh6</artifactId>
+    <artifactId>demo-hbase-async</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.hbase</groupId>
-            <artifactId>hbase-client</artifactId>
-            <version>2.1.0-cdh6.3.2</version>
+            <groupId>org.hbase</groupId>
+            <artifactId>asynchbase</artifactId>
+            <version>1.8.2</version>
         </dependency>
     </dependencies>
 
