--- a/demo-hbase-client/pom.xml
+++ b/demo-hbase-client/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>demo-hbase-cdh5</artifactId>
+    <artifactId>demo-hbase-client</artifactId>
 
     <dependencies>
 
@@ -22,10 +22,15 @@
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
-            <version>${hbase.cdh5.version}</version>
+            <version>${hbase2.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.60</version>
         </dependency>
 
     </dependencies>
-
 
 </project>
