--- a/demo-hbase-tools/pom.xml
+++ b/demo-hbase-tools/pom.xml
@@ -3,20 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>xyz.kail.demo</groupId>
         <artifactId>HBase</artifactId>
+        <groupId>xyz.kail.demo</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demo-hbase-async</artifactId>
+    <artifactId>demo-hbase-tools</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>org.hbase</groupId>
-            <artifactId>asynchbase</artifactId>
-            <version>1.8.2</version>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>${hbase2.version}</version>
         </dependency>
     </dependencies>
+
 
 </project>
