--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,16 @@
 
     <groupId>xyz.kail.demo</groupId>
     <artifactId>HBase</artifactId>
-    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
     <modules>
         <module>demo-hbase-cdh5</module>
         <module>demo-hbase-cdh6</module>
         <module>demo-hbase-async</module>
-        <module>demo-hbase-core</module>
+        <module>demo-hbase-client</module>
+        <module>demo-hbase-server</module>
+        <module>demo-hbase-tools</module>
     </modules>
 
 
@@ -25,6 +28,8 @@
         <!-- JDK 版本-->
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+
+        <slf4j.version>1.7.30</slf4j.version>
 
         <!-- HBase 版本 -->
         <hbase1.version>1.0.0</hbase1.version>
@@ -44,6 +49,19 @@
         </dependency>
 
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
@@ -55,13 +73,13 @@
     <repositories>
 
         <repository>
-            <id>cloudera</id>
-            <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+            <id>aliyun</id>
+            <url>https://maven.aliyun.com/repository/public</url>
         </repository>
 
         <repository>
-            <id>aliyun</id>
-            <url>https://maven.aliyun.com/repository/public</url>
+            <id>cloudera</id>
+            <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
         </repository>
 
     </repositories>
